test_cases/pass/p36.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT _count
_count=42
PRINT: _count
END SCRIPT
