test_cases/fail/f04.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5 PRINT: x
END SCRIPT
